--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,8 @@ body {
     align-items: center;
     height: 100vh;
     position: relative;
-    overflow-x: hidden; /* Prevent horizontal overflow */
+    overflow: hidden;
 }
-
 
 .grid {
     height: 100%;
@@ -30,13 +29,10 @@ body {
     border-radius: 20px;
     padding: 20px;
     box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
-    width: 90vw;
-    max-width: 320px;
+    width: 320px; /* Adjusted width */
     text-align: center;
     position: relative;
-    box-sizing: border-box; /* Ensure padding and border are included in width/height calculations */
 }
-
 
 .logo {
     width: 180px; /* Adjust the width as needed */
@@ -226,4 +222,10 @@ form {
         width: 90vw; /* Adjust width for smaller screens */
         padding: 10px; /* Reduce padding */
     }
+}
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden; /* Hide overflow on body */
 }
